<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>rqt_tf_tree</name>
  <version>0.5.7</version>
  <description>rqt_tf_tree provides a GUI plugin for visualizing the ROS TF frame tree.</description>
  <author>Thibault Kruse</author>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>
  <maintainer email="gm130s@gmail.com">Isaac I.Y. Saito</maintainer>
  <maintainer email="peter9606@gmail.com">Peter Han</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_tf_tree</url>
  <url type="repository">https://github.com/ros-visualization/rqt_tf_tree</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_tf_tree/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>qt_dotgraph</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_graph</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>python-mock</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
